tests/experimental/error/test_output_in_assume2.lus
node b (x:int) returns (y:int);
let
y = x;
tel

node top(x: int) returns (y: int);
(*@contract
  var g: int = b(y) + 1;
  assume g>0;
*)
let
  y = x + 1;
tel
